--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="price">
-        <span class="amount">200</span> USD
+        <span class="amount">1 $ = </span> USD
         <div class="egp">
             Price in EGP = <span> </span>
         </div>
